--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <a href="index.html" class="home">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+        <a href="cybersecurity.html">Cyber Attacks</a>
     </nav>
 
     <div>
