--- a/Cybersecurity Subpages/socialEngineering.html
+++ b/Cybersecurity Subpages/socialEngineering.html
@@ -24,6 +24,7 @@
                 <nav>
                     <a href="Cybersecurity Subpages/DDOS.html">DDOS</a>
                     <a href="Cybersecurity Subpages/evilTwin.html">MITM</a>
+                    <a href="socialEngineering.html">Social Engineering</a>
                 </nav>
             </div>
             
