Added desc to cybersecurity pages

--- a/Cybersecurity Subpages/DDOS.html
+++ b/Cybersecurity Subpages/DDOS.html
@@ -27,6 +27,11 @@
                     <a href="socialEngineering.html">Social Engineering</a>
                 </nav>
             </div>
+
+            <P>
+                cyberattack in which the perpetrator seeks to make a machine or network resource unavailable to its intended users by temporarily or indefinitely disrupting services of a host connected to a network.
+                the incoming traffic flooding the victim originates from many different sources.
+            </P>
             
             
             <div>
