--- a/Cybersecurity Subpages/evilTwin.html
+++ b/Cybersecurity Subpages/evilTwin.html
@@ -27,6 +27,12 @@
                     <a href="socialEngineering.html">Social Engineering</a>
                 </nav>
             </div>
+
+            <P>
+                An evil twin is a fraudulent Wi-Fi access point that appears to be legitimate but is set up to eavesdrop on wireless communications.
+                This type of attack, also known as a man-in-the-middle attack, may be used to steal the passwords of unsuspecting users, 
+                either by monitoring their connections or by phishing, which involves setting up a fraudulent web site and luring people there.
+            </P>
             
             
             <div>
