--- a/Cybersecurity Subpages/socialEngineering.html
+++ b/Cybersecurity Subpages/socialEngineering.html
@@ -27,6 +27,10 @@
                     <a href="socialEngineering.html">Social Engineering</a>
                 </nav>
             </div>
+
+            <P>
+                the use of psychological influence of people into performing actions or divulging confidential information.
+            </P>
             
             
             <div>
