--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -27,6 +27,12 @@
                     <a href="socialEngineering.html">Social Engineering</a>
                 </nav>
             </div>
+
+            <P>
+                A cyberattack (or cyber attack) occurs when there is an unauthorized action against computer infrastructure that compromises the confidentiality, integrity, or availability of its content.[1]
+                The rising dependence on increasingly complex and interconnected computer systems in most domains of life is the main factor that causes vulnerability to cyberattacks, since virtually all computer systems have bugs that can be exploited by attackers.
+                Although it is impossible or impractical to create a perfectly secure system, there are many defense mechanisms that can make a system more difficult to attack, making information security a field of rapidly increasing importance in the world today.
+            </P>
             
             
             <div>
