--- a/Cybersecurity Subpages/socialEngineering.html
+++ b/Cybersecurity Subpages/socialEngineering.html
@@ -22,8 +22,8 @@
             </nav>
             <div>
                 <nav>
-                    <a href="Cybersecurity Subpages/DDOS.html">DDOS</a>
-                    <a href="Cybersecurity Subpages/evilTwin.html">MITM</a>
+                    <a href="DDOS.html">DDOS</a>
+                    <a href="evilTwin.html">MITM</a>
                     <a href="socialEngineering.html">Social Engineering</a>
                 </nav>
             </div>
