--- a/socialEngineering.html
+++ b/socialEngineering.html
@@ -13,7 +13,7 @@
     
     </head>
         <body>
-            <header><h1>Number Guessing Game</h1></header>
+            <header><h1>Social Engineering</h1></header>
             <nav> 
                 <a href="index.html" class="home">Home</a>
                 <a href="about.html">About</a>
