added image property to cybersecurity pages

--- a/DDOS.html
+++ b/DDOS.html
@@ -28,6 +28,8 @@
                 </nav>
             </div>
 
+            <img src="images/alberto.jpg" alt="Picture of Alberto" class="person-img">
+
             <P>
                 cyberattack in which the perpetrator seeks to make a machine or network resource unavailable to its intended users by temporarily or indefinitely disrupting services of a host connected to a network.
                 the incoming traffic flooding the victim originates from many different sources.
