--- a/socialEngineering.html
+++ b/socialEngineering.html
@@ -28,6 +28,8 @@
                 </nav>
             </div>
 
+            <img src="images/alberto.jpg" alt="Picture of Alberto" class="person-img">
+
             <P>
                 the use of psychological influence of people into performing actions or divulging confidential information.
             </P>
