--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -13,7 +13,7 @@
     
     </head>
         <body>
-            <header><h1>Number Guessing Game</h1></header>
+            <header><h1>Cyber Attacks</h1></header>
             <nav> 
                 <a href="index.html" class="home">Home</a>
                 <a href="about.html">About</a>
@@ -27,6 +27,8 @@
                     <a href="socialEngineering.html">Social Engineering</a>
                 </nav>
             </div>
+
+            <img src="images/alberto.jpg" alt="Picture of Alberto" class="person-img">
 
             <P>
                 A cyberattack (or cyber attack) occurs when there is an unauthorized action against computer infrastructure that compromises the confidentiality, integrity, or availability of its content.[1]
