--- a/evilTwin.html
+++ b/evilTwin.html
@@ -28,6 +28,8 @@
                 </nav>
             </div>
 
+            <img src="images/alberto.jpg" alt="Picture of Alberto" class="person-img">
+
             <P>
                 An evil twin is a fraudulent Wi-Fi access point that appears to be legitimate but is set up to eavesdrop on wireless communications.
                 This type of attack, also known as a man-in-the-middle attack, may be used to steal the passwords of unsuspecting users, 
