--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <link href="cybersecurityMain.css" rel="stylesheet" type="text/css">
+        <link href="CSS/cybersecurityMain.css" rel="stylesheet" type="text/css">
 
     
     </head>
