added images to the cybersecurity pages

--- a/DDOS.html
+++ b/DDOS.html
@@ -28,7 +28,7 @@
                 </nav>
             </div>
 
-            <img src="images/alberto.jpg" alt="Picture of Alberto" class="person-img">
+            <img src="images/DDOS.png">
 
             <P>
                 cyberattack in which the perpetrator seeks to make a machine or network resource unavailable to its intended users by temporarily or indefinitely disrupting services of a host connected to a network.
