--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -28,7 +28,7 @@
                 </nav>
             </div>
 
-            <img src="images/alberto.jpg" alt="Picture of Alberto" class="person-img">
+            <img src="images/cybersecurity.jpg">
 
             <P>
                 A cyberattack (or cyber attack) occurs when there is an unauthorized action against computer infrastructure that compromises the confidentiality, integrity, or availability of its content.[1]
