--- a/evilTwin.html
+++ b/evilTwin.html
@@ -28,7 +28,7 @@
                 </nav>
             </div>
 
-            <img src="images/alberto.jpg" alt="Picture of Alberto" class="person-img">
+            <img src="images/man-in-the-middle-attack-how-avoid.png">
 
             <P>
                 An evil twin is a fraudulent Wi-Fi access point that appears to be legitimate but is set up to eavesdrop on wireless communications.
