--- a/socialEngineering.html
+++ b/socialEngineering.html
@@ -28,7 +28,7 @@
                 </nav>
             </div>
 
-            <img src="images/alberto.jpg" alt="Picture of Alberto" class="person-img">
+            <img src="images/socialEngine.jpg">
 
             <P>
                 the use of psychological influence of people into performing actions or divulging confidential information.
