added slot logic into the slot machine

--- a/slot_machine/index.html
+++ b/slot_machine/index.html
@@ -27,6 +27,7 @@
         <span id="available funds"></span>
         </div>
         </div>
+        <div id="slotIconSpace"></div>
         <script src="js/script.js"></script>
     </body>
 </html>
