--- a/sign_up_page/index.html
+++ b/sign_up_page/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
     <HEAD>
-        <TITLE>My First HTML Page</TITLE>
+        <TITLE>Sign Up Page</TITLE>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
